# Demo_code

./: README.md
source/: CMakeLists.txt  Makefile  README.md  input_partitions.csv
source/components/atl_FPID_controller/: CMakeLists.txt  atl_FPID.c
source/components/atl_FPID_controller/include/: atl_FPID.h
source/components/atl_IoT_aws/: CMakeLists.txt  aws_iot.c
source/components/atl_IoT_aws/include/: aws_iot.h
source/components/atl_XSH28_ADC/: CMakeLists.txt  atl_XSH28.c
source/components/atl_XSH28_ADC/include/: atl_XSH28.h
source/components/atl_app_task/: CMakeLists.txt  atl_LLTA_task.c  atl_RPID_task.c
source/components/atl_app_task/include/: atl_LLTA_task.h  atl_RPID_task.h  atl_app_defines.h  atl_app_hardware.h  atl_task_scheduler.h
source/components/atl_cs1238_ADC/: CMakeLists.txt  list_of_dot_a_hiden_functions
source/components/atl_cs1238_ADC/include/: cs1238.h
source/components/atl_encoder_knob/: CMakeLists.txt  atl_encoder.c
source/components/atl_encoder_knob/include/: atl_encoder.h
source/components/atl_max6675_ADC/: CMakeLists.txt  atl_max6675.c
source/components/atl_max6675_ADC/include/: atl_max6675.h
source/components/atl_motor_driver/: CMakeLists.txt  atl_motor_driver.c
source/components/atl_motor_driver/include/: atl_motor_driver.h
source/components/atl_nvs_factory/: CMakeLists.txt  nvs_fuc.c
source/components/atl_pwm_buzzer/: CMakeLists.txt  atl_pwm_buzzer.c
source/components/atl_timer/: CMakeLists.txt  atl_timer.c
source/components/atl_uart/: CMakeLists.txt  atl_uart.c
source/main/: CMakeLists.txt  app_main.c
(+8 files in other folders)
